<?xml version="1.0"?>
<package format="2">
  <name>graph_msf</name>
  <version>0.0.0</version>

  <description>
    State estimation based on factor graphs, utilizing GTSAM functionality. Fusion of IMU, LiDAR Mapping Odometry and GNSS estimates.
  </description>

  <maintainer email="nubertj@ethz.ch">Julian Nubert</maintainer>
  <license>BSD</license>
  <author email="nubertj@ethz.ch">Julian Nubert</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>cmake_clang_tools</build_depend>

  <exec_depend>eigen_conversions</exec_depend>

</package>
